--- a/app/src/main/res/layout/activity_schedule_managment.xml
+++ b/app/src/main/res/layout/activity_schedule_managment.xml
@@ -22,9 +22,6 @@
                 android:id="@+id/calendar_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_18dp"
-                android:layout_marginEnd="@dimen/size_18dp"
-                app:layout_constraintBottom_toTopOf="@id/switch_btn_tx"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +31,6 @@
                 android:id="@+id/switch_btn_tx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_10dp"
                 android:layout_marginBottom="@dimen/size_10dp"
                 android:fontFamily="@font/poppins_regular"
                 android:gravity="end"
@@ -50,13 +46,14 @@
 
             <ToggleButton
                 android:id="@+id/switch_btn"
-                android:layout_width="@dimen/size_50dp"
-                android:layout_height="@dimen/size_25dp"
-                android:layout_marginTop="@dimen/size_25dp"
+                android:foregroundGravity="center"
+                android:layout_width="@dimen/size_60dp"
+                android:layout_height="@dimen/size_35dp"
+                android:layout_marginTop="@dimen/size_20dp"
                 android:layout_marginEnd="@dimen/size_30dp"
                 android:layout_marginBottom="@dimen/size_20dp"
                 android:layout_weight="0.2"
-                android:background="@drawable/track_switch"
+                android:background="@drawable/toggle_track"
                 android:gravity="center"
                 android:scaleX="1"
                 android:scaleY="1"
