--- a/app/src/main/res/drawable/circle_fade_35.xml
+++ b/app/src/main/res/drawable/circle_fade_35.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="@dimen/size_35dp"
     android:height="@dimen/size_35dp"
-    android:tint="@color/circle_gray"
+    android:tint="@color/day_blue"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="@color/day_blue"
         android:pathData="M12,12m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0" />
 </vector>
