--- a/app/src/main/res/drawable/week_selector.xml
+++ b/app/src/main/res/drawable/week_selector.xml
@@ -8,7 +8,7 @@
                 android:topLeftRadius="@dimen/size_10dp" />
             <stroke
                 android:width="@dimen/size_2dp"
-                android:color="@color/circle_gray" />
+                android:color="@color/blue_week_selection_border" />
         </shape>
     </item><!-- Body -->
     <item
@@ -19,7 +19,7 @@
             <corners
                 android:bottomLeftRadius="@dimen/size_20dp"
                 android:topLeftRadius="@dimen/size_20dp" />
-            <solid android:color="@color/white"></solid>
+            <solid android:color="@color/blue_week_selection" />
         </shape>
     </item>
 
