--- a/app/src/main/res/drawable/time_slot_custom_layout.xml
+++ b/app/src/main/res/drawable/time_slot_custom_layout.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/buttoncolor" />
-    <solid android:color="@color/white" />
+        android:color="@color/day_blue" />
+    <solid android:color="@color/day_blue" />
 </shape>
