--- a/app/src/main/res/layout/fragment_quote_brief.xml
+++ b/app/src/main/res/layout/fragment_quote_brief.xml
@@ -24,27 +24,30 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/size_10dp"
-            android:layout_marginLeft="@dimen/size_10dp"
+            android:paddingTop="@dimen/size_10dp"
+           android:paddingStart="@dimen/size_15dp"
+            android:paddingBottom="@dimen/size_10dp"
+
             android:gravity="center">
 
-            <TextView
-                android:id="@+id/tx_catering"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:fontFamily="@font/poppins_medium"
-                android:text="@string/catering_fork_spoon"
-                android:textSize="@dimen/size_25sp" />
-
             <ImageView
+                android:layout_marginTop="@dimen/size_5dp"
                 android:id="@+id/btn_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginRight="@dimen/size_8dp"
+                app:srcCompat="@drawable/arrow_back" />
+            <TextView
+                android:layout_marginStart="@dimen/size_30dp"
+                android:id="@+id/tx_catering"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="@dimen/size_5dp"
-                android:layout_marginRight="@dimen/size_5dp"
-                android:src="@drawable/backarrow" />
+                android:fontFamily="@font/mulish_semi_bold"
+                android:text="@string/catering_fork_spoon"
+                android:textColor="@color/theme_header_blue"
+                android:textSize="@dimen/size_24sp" />
         </RelativeLayout>
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
@@ -67,7 +70,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="@dimen/size_20dp">
                     <TextView
-                        android:fontFamily="@font/poppins_medium"
+                        android:fontFamily="@font/mulish_bold"
                         android:layout_marginTop="5dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -82,9 +85,9 @@
                         android:id="@+id/tx_job_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/size_24dp"
-                        android:fontFamily="@font/poppins_medium"
+                        android:fontFamily="@font/mulish_bold"
                         android:text="@string/_2500"
-                        android:textColor="@color/black"
+                        android:textColor="@color/black_event_title"
                         android:textSize="@dimen/size_22sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
