--- a/app/src/main/res/layout/fragment_view_order_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_view_order_details_dialog.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewOrderDetailsViewModel"
             type="com.smf.events.ui.vieworderdetails.ViewOrderDetailsViewModel" />
@@ -27,34 +26,33 @@
                 android:id="@+id/linear_catering"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_10dp"
-                android:layout_marginTop="@dimen/size_10dp"
-                android:gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                android:paddingTop="@dimen/size_10dp"
+                android:paddingStart="@dimen/size_15dp"
+                android:paddingBottom="@dimen/size_10dp"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_marginTop="@dimen/size_5dp"
+                    android:id="@+id/btn_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginRight="@dimen/size_8dp"
+                    app:srcCompat="@drawable/arrow_back" />
 
                 <TextView
                     android:id="@+id/tx_catering"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="@string/order_details"
-                    android:textSize="@dimen/size_25sp" />
-
-                <ImageView
-                    android:id="@+id/btn_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="@dimen/size_5dp"
-                    android:background="@drawable/icon_image_view_background"
-                    android:backgroundTint="@color/button_blue"
-                    android:padding="@dimen/size_5dp"
-                    android:src="@drawable/backarrow" />
-
+                    android:layout_marginStart="@dimen/size_32dp"
+                    android:fontFamily="@font/mulish_semi_bold"
+                    android:text="@string/order_details"
+                    android:textColor="@color/theme_header_blue"
+                    android:textSize="@dimen/size_24sp" />
             </RelativeLayout>
 
             <androidx.cardview.widget.CardView
@@ -89,7 +87,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/size_5dp"
-                            android:fontFamily="@font/poppins_medium"
+                            android:fontFamily="@font/mulish_bold"
                             android:textColor="@color/black"
                             android:textSize="@dimen/size_18sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +100,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/size_5dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/mulish_regular"
                             android:textColor="@color/lightblue"
                             android:textSize="@dimen/size_18sp"
                             app:layout_constraintStart_toStartOf="parent"
@@ -122,7 +120,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/size_5dp"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:text="@string/event_dates"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -132,7 +130,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/size_5dp"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -152,7 +150,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/size_5dp"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:text="@string/venue_zip_code"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -162,7 +160,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/size_5dp"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -174,7 +172,7 @@
                             android:layout_width="@dimen/dp_0"
                             android:layout_height="@dimen/size_2dp"
                             android:layout_marginTop="@dimen/size_10dp"
-                            android:background="#DAD8D8"
+                            android:background="@color/light_gray_background"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/zip_layout" />
@@ -186,13 +184,17 @@
                         android:id="@+id/service_layer"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/fade_background"
+                        android:paddingTop="@dimen/size_5dp"
+                        android:layout_marginStart="@dimen/size_10dp"
+                        android:layout_marginEnd="@dimen/size_10dp"
+                        android:paddingBottom="@dimen/size_10dp"
+                        android:background="@color/quote_details_blue"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_medium"
+                            android:fontFamily="@font/mulish_medium"
                             android:paddingStart="@dimen/size_10dp"
                             android:paddingTop="@dimen/size_5dp"
                             android:text="@string/service_details"
@@ -212,7 +214,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:text="@string/service_date"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -221,7 +223,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:paddingStart="@dimen/size_5dp"
 
                                 android:textColor="@color/black"
@@ -242,7 +244,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:text="@string/bid_cut_off_date"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -251,7 +253,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:paddingStart="@dimen/size_5dp"
 
                                 android:textColor="@color/black"
@@ -271,7 +273,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:text="@string/estimation_budget"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -280,7 +282,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:paddingStart="@dimen/size_5dp"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/size_16sp" />
@@ -300,7 +302,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:text="@string/service_radius"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -309,7 +311,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:paddingStart="@dimen/size_5dp"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/size_16sp" />
@@ -328,7 +330,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:text="@string/prefered_time_slot"
                                 android:textSize="@dimen/size_16sp" />
 
@@ -337,7 +339,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1.5"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/mulish_regular"
                                 android:paddingStart="@dimen/size_5dp"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/size_16sp" />
@@ -351,7 +353,7 @@
                         android:layout_height="@dimen/size_1dp"
                         android:layout_margin="@dimen/size_15dp"
                         android:layout_marginTop="@dimen/size_10dp"
-                        android:background="@color/buttoncolor"
+                        android:background="@color/lite_gray"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/service_layer" />
@@ -365,7 +367,7 @@
                             android:id="@+id/question"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_semibold"
+                            android:fontFamily="@font/mulish_semi_bold"
                             android:paddingStart="@dimen/size_10dp"
                             android:paddingTop="@dimen/size_5dp"
                             android:textSize="@dimen/size_18sp" />
