--- a/app/src/main/res/layout/time_slot_title.xml
+++ b/app/src/main/res/layout/time_slot_title.xml
@@ -10,7 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/time_slot_custom_layout"
+        android:background="@drawable/corner_radius_background_modify_slots"
+        android:backgroundTint="@color/day_blue"
         android:paddingTop="@dimen/size_8dp"
         android:paddingBottom="@dimen/size_8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +24,7 @@
             android:layout_height="@dimen/size_30dp"
             android:layout_marginStart="@dimen/size_10dp"
             android:contentDescription="@string/icon"
-            android:src="@drawable/select"
+            android:src="@drawable/new_selection"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +37,7 @@
             android:fontFamily="@font/poppins_medium"
             android:text="@string/aug_14"
             android:textSize="@dimen/size_15sp"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/selected_imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.08"
