Task 2839 Dashboard Recycler view changes
-Added the Arrow icon for the movement for horizontal recycler view
-And made design changes in Dashboard fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,5 +51,6 @@
     <color name="backGroundGray">#DAD8D8</color>
     <color name="quote_details_blue">#ECF4FA</color>
     <color name="dark_font">#2B2D5C</color>
+    <color name="title_background_blue">#2846B3</color>
 
 </resources>
