--- a/app/src/main/res/layout/events_card_view.xml
+++ b/app/src/main/res/layout/events_card_view.xml
@@ -4,9 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/action_card_view_layout"
     android:layout_width="@dimen/size_90dp"
-    android:layout_height="@dimen/size_90dp"
+    android:layout_height="@dimen/size_80dp"
     android:layout_marginTop="@dimen/size_10dp"
-    android:layout_marginEnd="@dimen/size_10dp">
+    android:layout_marginEnd="@dimen/size_18dp"
+    android:background="@drawable/corner_radius_background_modify_slots"
+    android:backgroundTint="@color/title_background_blue"
+    android:paddingTop="@dimen/size_8dp">
 
     <TextView
         android:id="@+id/number_text"
