--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="dashBoardViewModel"
             type="com.smf.events.ui.dashboard.DashBoardViewModel" />
@@ -213,36 +214,67 @@
 
 
                     <LinearLayout
-                        android:paddingTop="@dimen/size_20dp"
                         android:id="@+id/myEvents_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/size_200dp"
+                        android:layout_height="@dimen/size_230dp"
                         android:background="@drawable/panel"
                         android:orientation="vertical"
+                        android:paddingTop="@dimen/size_20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
-                            android:layout_marginTop="@dimen/size_12dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/size_20dp"
+                            android:layout_marginTop="@dimen/size_8dp"
                             android:fontFamily="@font/mulish_bold"
                             android:text="@string/event_overview"
                             android:textColor="@color/white"
                             android:textSize="@dimen/size_20sp" />
 
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/events_recycler_view"
+                        <LinearLayout
+                            android:id="@+id/service_count_layout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/size_8dp"
-                            android:layout_marginTop="@dimen/size_30dp"
-                            android:layout_marginBottom="@dimen/size_20dp"
                             android:orientation="horizontal"
-                            tools:listitem="@layout/events_card_view" />
+                            android:weightSum="3">
+
+                            <ImageView
+                                android:id="@+id/left_dtn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="@dimen/size_15dp"
+                                android:layout_marginTop="@dimen/size_10dp"
+                                android:layout_weight=".5"
+                                app:srcCompat="@drawable/arrow_left_20" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/events_recycler_view"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/size_8dp"
+                                android:layout_marginTop="@dimen/size_30dp"
+                                android:layout_marginEnd="@dimen/size_10dp"
+                                android:layout_marginBottom="@dimen/size_20dp"
+                                android:layout_weight="2"
+                                android:orientation="horizontal"
+                                tools:listitem="@layout/events_card_view" />
+
+                            <ImageView
+                                android:id="@+id/right_btn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="@dimen/size_10dp"
+                                android:layout_marginStart="@dimen/size_5dp"
+                                android:layout_marginEnd="@dimen/size_15dp"
+                                android:layout_weight=".5"
+                                app:srcCompat="@drawable/arrow_forward_20" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -250,7 +282,7 @@
                         android:id="@+id/spinner_action"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/size_180dp"
+                        android:layout_marginTop="@dimen/size_200dp"
                         app:cardCornerRadius="@dimen/size_20dp"
                         app:cardElevation="@dimen/size_5dp"
                         app:layout_constraintEnd_toEndOf="parent"
